# luminor_homework

./: README.md  main.py  pyproject.toml
configurations/dummy_mongo/: dummy_mongo_bulk.yml  mongo_pipeline.py
entities/models/: dummy_mongo_model.py
plugins/: __init__.py  etl.py
plugins/error_handlers/: __init__.py  simple_handler.py
plugins/extractors/: __init__.py  mongo.py
plugins/loaders/: __init__.py  s3_loader.py
plugins/validators/: __init__.py  model_validator.py
